<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/tvPanjang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/panjang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPanjang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/tvPanjang"
        app:layout_constraintStart_toStartOf="@+id/tvPanjang"
        app:layout_constraintTop_toBottomOf="@+id/tvPanjang"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tvLebar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lebar"
        app:layout_constraintEnd_toEndOf="@+id/tvPanjang"
        app:layout_constraintStart_toStartOf="@+id/tvPanjang"
        app:layout_constraintTop_toBottomOf="@+id/etPanjang" />

    <EditText
        android:id="@+id/etLebar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/tvLebar"
        app:layout_constraintStart_toStartOf="@+id/tvLebar"
        app:layout_constraintTop_toBottomOf="@+id/tvLebar"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tvTinggi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tinggi"
        app:layout_constraintEnd_toEndOf="@+id/tvPanjang"
        app:layout_constraintStart_toStartOf="@+id/tvPanjang"
        app:layout_constraintTop_toBottomOf="@+id/etLebar" />

    <EditText
        android:id="@+id/etTinggi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/tvTinggi"
        app:layout_constraintStart_toStartOf="@+id/tvTinggi"
        app:layout_constraintTop_toBottomOf="@+id/tvTinggi"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:visibility="visible"
        android:id="@+id/btnSimpan"
        android:text="@string/simpan"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPanjang"
        app:layout_constraintStart_toStartOf="@+id/tvPanjang"
        app:layout_constraintTop_toBottomOf="@+id/etTinggi" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/etTinggi"
        app:layout_constraintStart_toStartOf="@+id/etTinggi"
        app:layout_constraintTop_toBottomOf="@+id/btnSimpan">

        <Button
            android:id="@+id/btnHitungVolume"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hitung_volume" />

        <Button
            android:id="@+id/btnHitungKeliling"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hitung_keliling" />

        <Button
            android:id="@+id/btnHitungLuas"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hitung_luas_area" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPanjang"
        app:layout_constraintStart_toStartOf="@+id/tvPanjang"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>